--- a/src/components/ForecastWeather/ForcastWeather.css
+++ b/src/components/ForecastWeather/ForcastWeather.css
@@ -20,3 +20,13 @@
 .icon-forecast {
   width: 100px;
 }
+
+@media (max-width: 360px) {
+  .icon-forecast {
+    width: 60px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+}
