--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -45,6 +45,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+
 }
 
 .info {
@@ -52,7 +54,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: rgba(7, 80, 93, 0.5);
+  background: linear-gradient(to right, #fefefe, #13d1ef);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: value;
   margin-bottom: 10px;
   width: 100%;
   height: 150px;
@@ -78,6 +83,7 @@
   .temperature {
     font-size: 100px;
   }
+
   .city-name {
     font-size: 40px;
   }
@@ -87,6 +93,7 @@
   .icon {
     width: 120px;
   }
+
   .temperature {
     font-size: 90px;
   }
