--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -54,10 +54,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right, #fefefe, #13d1ef);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: value;
+  background-color: rgb(25, 94, 106);
   margin-bottom: 10px;
   width: 100%;
   height: 150px;
