--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,36 +1,70 @@
-.search-container {
-  min-width: auto;
-  width: 40%;
-  height: 42px;
-  background-color: #ffffff;
-  border: 1px solid #2d5656;
-  border-radius: 10px;
+.searchInputs {
+  margin-top: 105px;
+  display: flex;
   align-items: center;
-  margin: 20px 0;
-  color: #020101;
-  font-size: 20px;
-  text-align: center;
+  justify-content: center;
+
+
 }
 
-::placeholder {
-  color: #000000;
-  opacity: 1;
-  text-align: center;
-  font-size: 15px;
+.search input {
+  background-color: white;
+  border: 0;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 400px;
+  color: black;
+  
+  
 }
 
-.btn {
-  height: 42px;
+
+input:focus {
+  outline: none;
+}
+
+.searchIcon {
+  height: 60px;
+  width: 50px;
+  background-color: white;
+  display: grid;
+  place-items: center;
+  color: black;
+}
+
+#clearBtn {
+  cursor: pointer;
+}
+
+.dataResult {
+  margin-top: 5px;
+  width: 480px;
+  height: auto;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+  overflow-y: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.dataResult::-webkit-scrollbar {
+  display: none;
+}
+
+.dataResult .dataItem {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.dataItem p {
   margin-left: 10px;
-  border-radius: 5px;
-  background-color: #114148;
-  border: none;
-  color: #ffffff;
-  width: 90px;
-  font-size: 17px;
 }
 
-.icon {
-  width: 280px;
-  margin-right: 20px;
-}
