--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,10 +1,9 @@
+/* Default styles */
 .searchInputs {
   margin-top: 105px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
 .search input {
@@ -18,13 +17,6 @@
   height: 30px;
   width: 400px;
   color: black;
-  
-  
-}
-
-
-input:focus {
-  outline: none;
 }
 
 .searchIcon {
@@ -68,3 +60,21 @@ input:focus {
   margin-left: 10px;
 }
 
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+
+
+  .search input {
+    width: 70%;
+
+  }
+
+
+  .dataResult {
+    width: 100%;
+
+    max-width: 480px;
+    margin-top: 10px;
+ 
+  }
+}
