--- a/src/components/ForecastWeather/ForcastWeather.css
+++ b/src/components/ForecastWeather/ForcastWeather.css
@@ -23,12 +23,16 @@
 
 
 
-@media (max-width: 360px) {
+@media (max-width: 370px) {
   .icon-forecast {
     width: 60px;
   }
 
   p {
     font-size: 12px;
+  }
+
+  h3 {
+    font-size: 15px;
   }
 }
